en/docs/api-manager/3.1.0/learn/api-security/oauth2/grant-types/jwt-grant.md
---
title: "JWT grant"
description: "Configure and use the JWT bearer grant to exchange JWT assertions from an external identity provider for OAuth2 tokens."
canonical_url: https://wso2.com/api-platform/docs/api-manager/3.1.0/learn/api-security/oauth2/grant-types/jwt-grant/
md_url: https://wso2.com/api-platform/docs/api-manager/3.1.0/learn/api-security/oauth2/grant-types/jwt-grant.md
tags:
  - api-manager
  - learn
  - api-security
  - oauth2
author: WSO2 API Platform Documentation Team
last_updated: 2026-08-19
content_type: "how-to"
---

# JWT Grant

The JSON Web Token (JWT) Bearer Grant is simply a JSON string containing claim values that will be evaluated and validated by the JWT Grant Handlers at the Authorization Server end before issuing an access token.

WSO2 API Manager (WSO2 API-M), as an OAuth 2.0 Authorization Server with its key manager features, can accept JWT Assertions from OAuth 2.0 clients as means of resource owner authentication and authorization. Additionally, it can exchange the JWT access token with the OAuth 2.0 access tokens in order to access protected resources on behalf of the resource owner.

-   [Configuring the JWT grant](#configuring-the-jwt-grant)
-   [Using the JWT grant](#using-the-jwt-grant)
-   [JWT Bearer Grant](#jwt-bearer-grant)

## Configuring the JWT grant

### Step 1 - Obtain a JWT from an external Identity Provider

You can use any identity provider to obtain a JWT. As an example, this step will discuss how to obtain a JWT from WSO2 Identity Server (WSO2 IS).

1. Download and install the [latest WSO2 IS](https://wso2.com/identity-and-access-management/#).

     If you downloaded the archive, extract it. `<IS_HOME>` refers to the root folder of the extracted WSO2 IS.

2. Start WSO2 IS with a port offset.

     `portOffset` is required only if you are running both API-M and IS in the same JVM.

      `sh wso2server.sh -DportOffset=1`

3. Sign in to the WSO2 IS Management Console (`https://<IS_Server_Host>:9444/carbon`).

4. Click **Main** --> **Service Providers** --> **Add**.

     <a href="../../../../../assets/img/learn/api-security/oauth2/jwt-grant/add-service-provider-menu.png" >
     <img src="../../../../../assets/img/learn/api-security/oauth2/jwt-grant/add-service-provider-menu.png" alt="Add Service Provider Menu" title="Add Service Provider Menu" width="30%" />
     </a>

5.  Enter the name of the service provider and click **Register**.

     [![Add Service Provider](../../../../assets/img/learn/api-security/oauth2/jwt-grant/create-external-sp.png)](../../../../assets/img/learn/api-security/oauth2/jwt-grant/create-external-sp.png)

6.  Click **Inbound Authentication Configuration** --> **OAuth/OpenId Connect Configuration** --> **Configure** to add a new OAuth2 client.

     [![Add Oauth app](../../../../assets/img/learn/api-security/oauth2/jwt-grant/add-oauth-app.png)](../../../../assets/img/learn/api-security/oauth2/jwt-grant/add-oauth-app.png)

     <a name="step5"></a>

7.  Provide a **Callback URL** and set the **Token Issuer** as `JWT`, then click **Add**.

     If you do not have a **Callback URL**, you can clear the **Code** and **Implicit** authorization grant types and add the OAuth2 client.

     <a href="../../../../../assets/img/learn/api-security/oauth2/jwt-grant/register-oauth-app.png" ><img src="../../../../../assets/img/learn/api-security/oauth2/jwt-grant/register-oauth-app.png" alt="Register Oauth app" title="Register Oauth app"/></a>

    Now you have successfully created an OAuth2 client and generated a consumer key and consumer secret for it.

    [![OAuth app credentials](../../../../assets/img/learn/api-security/oauth2/jwt-grant/external-oauthapp-credentials.png)](../../../../assets/img/learn/api-security/oauth2/jwt-grant/external-oauthapp-credentials.png)

Now you have configured a service provider in WSO2 IS that can be used [later](#using-the-jwt-grant) to obtain a JWT. In the next step, let's register an identity provider and create a service provider in WSO2 API-M.

### Step 2 - Configure an Identity Provider and a Service Provider in WSO2 API-M

1. Make sure WSO2 API-M is [up and running](../../../../install-and-setup/install/running-the-product.md#starting-the-server).

2. Sign in to the WSO2 API-M Management Console (`https://<API-M_Server_Host>:9443/carbon`)

3. Navigate to the **Identity Providers** section in the **Main** -> **Identity** section and click **Add.**

4. Provide the following values to configure the Identity Provider.
    -   **Identity Provider Name :** Enter the issuer name as the identity provider name. This is used to generate the JWT assertion. The issuer of a JWT generated by WSO2 IS is by default `https://localhost:9444/oauth2/token`.
    -   **Identity Provider Public Certificate :** Choose the radio button named **Upload IDP certificate** so that the field named **Identity Provider Public Certificate** will be enabled. This is the certificate which will be used to sign the JWT assertion.

        !!! info
            The **Identity Provider Public Certificate** is the public certificate that belongs to the identity provider. It is necessary to update this certificate to authenticate the response from the identity provider.

            This can be any certificate. As you have used WSO2 IS as the identity provider here, follow the instructions below to create the identity provider certificate using the `wso2carbon.jks file`.

            - Open your command line interface, navigate to the `<IS_HOME>/repository/resources/security/` directory and run the following command.

              ``` java
              keytool -export -alias wso2carbon -file wso2.crt -keystore wso2carbon.jks -storepass wso2carbon
              ```

            - After you run this command, the certificate will be exported as `wso2.crt` in the same folder. You can upload it by clicking **Choose File** in Identity Provider section in the Management Console.

            For more information on how public keys work and how to sign these keys by a certification authority, see [About Asymmetric Cryptography](../../../../install-and-setup/setup/security/configuring-keystores/keystore-basics/about-asymetric-cryptography.md).

    -   **Alias** : Enter the audience (`aud` value) of the JWTs issued by the identity provider (WSO2 IS).

    !!! tip
         When testing, you can find the values such as issuer name (`iss`) and audience (`aud`) by decoding the JWT obtained in [Step 1](#step-1-obtain-a-jwt-from-an-external-identity-provider) using a JWT decoder such as [https://jwt.io](https://jwt.io). For more information, see [JWT Bearer Grant](#jwt-bearer-grant).

    [![Add Identity Provider](../../../../assets/img/learn/api-security/oauth2/jwt-grant/add-identity-provider.png)](../../../../assets/img/learn/api-security/oauth2/jwt-grant/add-identity-provider.png)

4. Click **Register** to complete the registration of the identity provider.

5. Navigate to the **Service Providers** section in the **Main** -> **Identity** section and click **Add.**

6. Fill in the **Service Provider Name** and provide a brief **Description** of the service provider. See [Adding a Service Provider](https://is.docs.wso2.com/en/5.10.0/learn/adding-and-configuring-a-service-provider/) for more information.

7. Expand the **OAuth/OpenID Connect Configuration** section under **Inbound Authentication Configuration** and click **Configure.**

8. Enter a **Callback URL.** For example, use `http://localhost:8080/playground` and click **Add**.

     The **OAuth Client Key** and **OAuth Client Secret** will now be visible.

    [![](../../../../assets/img/learn/add-service-provider.png)](../../../../assets/img/learn/add-service-provider.png)

Now you have a registered identity provider and as well as a service provider with an **OAuth Client Key** and an **OAuth Client Secret**. In the next section, you can test the JWT grant with the configured setup.

## Using the JWT grant

1. Obtain a JWT from the service provider.

     Use the following sample cURL command to obtain a JWT from the service provider inside WSO2 IS that you configured in [Step 1](#step-1-obtain-a-jwt-from-an-external-identity-provider). Note that, you can use any `grant_type` when sending the request. For more information, see [OAuth2 Grant Types](overview.md).

    ``` java tab="Format"
    curl -k -d "grant_type=<grant_type_of_your_choice>" -H "Authorization: Basic <Base64-encoded-client_key:client_secret>" -H "Content-Type: application/x-www-form-urlencoded" https://<IS_Server_Host>:9444/oauth2/token
    ```

    ``` java tab="Example"
    curl -k -d "grant_type=password&username=admin&password=admin" -H "Authorization: Basic cEJ6dUlaaEdwaGZRbWRjVVgwbG5lRmlpdXh3YTo0U0pnV19qTU56aGpIU284OGJuZVhtTnFNMjRh" -H "Content-Type: application/x-www-form-urlencoded" https://localhost:9444/oauth2/token
    ```

    **Sample Response**
    ```
    {"access_token":"eyJ4NXQiOiJNell4TW1Ga09HWXdNV0kwWldObU5EY3hOR1l3WW1NNFpUQTNNV0kyTkRBelpHUXpOR00wWkdSbE5qSmtPREZrWkRSaU9URmtNV0ZoTXpVMlpHVmxOZyIsImtpZCI6Ik16WXhNbUZrT0dZd01XSTBaV05tTkRjeE5HWXdZbU00WlRBM01XSTJOREF6WkdRek5HTTBaR1JsTmpKa09ERmtaRFJpT1RGa01XRmhNelUyWkdWbE5nX1JTMjU2IiwiYWxnIjoiUlMyNTYifQ.eyJzdWIiOiJhZG1pbiIsImF1dCI6IkFQUExJQ0FUSU9OX1VTRVIiLCJhdWQiOiJxNVlVSzloY1lMcUZXenZaQVJHb21UNzh6NThhIiwibmJmIjoxNjEzMTMwNTAxLCJhenAiOiJxNVlVSzloY1lMcUZXenZaQVJHb21UNzh6NThhIiwiaXNzIjoiaHR0cHM6XC9cL2xvY2FsaG9zdDo5NDQ0XC9vYXV0aDJcL3Rva2VuIiwiZXhwIjoxNjEzMTM0MTAxLCJpYXQiOjE2MTMxMzA1MDEsImp0aSI6IjdmZDc0NGQ5LWJlYTMtNDJiNS1hY2RjLWVmMDU0NGRjMmZhZiJ9.mBh0FB8kPKwkqP8rV78YXaSqmv_j-7kSKlylOfH8i1M3g8JvEQRx5gsxwMNidOr28DIL9hNv7Ebz6j6tqu-HUXtB_QgQGbF1QRALtBcYaV1-O8V_TAs02P7KYx_jfZv2HCVEE-s-jW2vBAMa24ZwgI0uCk4QHsev1chLd85FZdwbzqe0E0lt5hfB0Y5kLnZmzQFdBxkrv9eTppO5Z2WLyKFt9j2oI2a2eqa_NOYr7pwLyuzg-QL4Xz3SdfC3SMHPjAmaksJfcOS-SuswQ_edPN02fXVR0SKGCVIS-86u-9D4xgFvf_jtIg2Xd2LNNHY6BPBj1l9Nk_rfesnllx04ZA","refresh_token":"b6549344-c5ba-3103-8f93-475aa5416759","token_type":"Bearer","expires_in":3600}
    ```

2. Execute the following cURL command to retrieve the access token from WSO2 API-M for the generated JWT in the previous step.

    ``` java tab="Format"
    curl -X POST -u <clientid>:<clientsecret> -k -d 'grant_type=urn:ietf:params:oauth:grant-type:jwt-bearer&assertion=<JWT>' -H 'Content-Type: application/x-www-form-urlencoded' https://localhost:<HTTPS-port>/token
    ```

    ``` java tab="Example"
    curl -X POST -u 4WCCBckEpMMM5oFmC59EEtJXpzEa:_htM8KV73STHfzBO4TGbnC9iSswa -k -d 'grant_type=urn:ietf:params:oauth:grant-type:jwt-bearer&assertion=eyJ4NXQiOiJNell4TW1Ga09HWXdNV0kwWldObU5EY3hOR1l3WW1NNFpUQTNNV0kyTkRBelpHUXpOR00wWkdSbE5qSmtPREZrWkRSaU9URmtNV0ZoTXpVMlpHVmxOZyIsImtpZCI6Ik16WXhNbUZrT0dZd01XSTBaV05tTkRjeE5HWXdZbU00WlRBM01XSTJOREF6WkdRek5HTTBaR1JsTmpKa09ERmtaRFJpT1RGa01XRmhNelUyWkdWbE5nX1JTMjU2IiwiYWxnIjoiUlMyNTYifQ.eyJzdWIiOiJhZG1pbiIsImF1dCI6IkFQUExJQ0FUSU9OX1VTRVIiLCJhdWQiOiJxNVlVSzloY1lMcUZXenZaQVJHb21UNzh6NThhIiwibmJmIjoxNjEzMTMwNTAxLCJhenAiOiJxNVlVSzloY1lMcUZXenZaQVJHb21UNzh6NThhIiwiaXNzIjoiaHR0cHM6XC9cL2xvY2FsaG9zdDo5NDQ0XC9vYXV0aDJcL3Rva2VuIiwiZXhwIjoxNjEzMTM0MTAxLCJpYXQiOjE2MTMxMzA1MDEsImp0aSI6IjdmZDc0NGQ5LWJlYTMtNDJiNS1hY2RjLWVmMDU0NGRjMmZhZiJ9.mBh0FB8kPKwkqP8rV78YXaSqmv_j-7kSKlylOfH8i1M3g8JvEQRx5gsxwMNidOr28DIL9hNv7Ebz6j6tqu-HUXtB_QgQGbF1QRALtBcYaV1-O8V_TAs02P7KYx_jfZv2HCVEE-s-jW2vBAMa24ZwgI0uCk4QHsev1chLd85FZdwbzqe0E0lt5hfB0Y5kLnZmzQFdBxkrv9eTppO5Z2WLyKFt9j2oI2a2eqa_NOYr7pwLyuzg-QL4Xz3SdfC3SMHPjAmaksJfcOS-SuswQ_edPN02fXVR0SKGCVIS-86u-9D4xgFvf_jtIg2Xd2LNNHY6BPBj1l9Nk_rfesnllx04ZA' -H 'Content-Type: application/x-www-form-urlencoded' https://localhost:8243/token
    ```

    !!! note
        - The **-u** flag should specify the “ `<Client Id>:<Client Secret>` ” value.

             You can use the **OAuth Client Key** and an **OAuth Client Secret** that you obtained at the end of [Step 2](#step-2-configure-an-identity-provider-and-a-service-provider-in-wso2-api-m) here).

        - The assertion parameter value (`<JWT>`) is the signed base64 encoded JWT.

             You can use the JWT that you obtained at the end of [Step 1](#step-1-obtain-a-jwt-from-an-external-identity-provider) here). The value of the assertion parameter **MUST** contain a **single JWT.** For more information on assertion, see [JWT Bearer Grant](#jwt-bearer-grant).

    !!! info
        If you have configured the service provider and identity provider in a tenant, you have to add the tenant domain as a query parameter to the access token endpoint.

        If the tenant domain is `wso2.com`, the access token endpoint will be as follows:

        ``` java
        Access Token Endpoint: https://localhost:8243/token?tenantDomain=wso2.com
        ```

    You would now have received the response from the token endpoint of WSO2 API-M. The response would contain the access token, refresh token, expiry time, scope and token type.

    **Sample response**

    ``` java
    {"access_token":"650547f8-1dd3-3586-bbd0-57d01e097afe","refresh_token":"d65152ee-64bf-3d2f-853b-eb54b9baac63","scope":"default","token_type":"Bearer","expires_in":3600}
    ```

## JWT Bearer Grant

The JWT contains three parts that are separated by dots ".":

-   header 
-   payload
-   signature 

The header identifies the algorithm used to generate the signature. For example, see the following code block.

**Sample header**

```
{
    "alg":"RS256"
}
```

The payload contains the claims mentioned below:

<table>
<tbody>
<tr>
<td><code>iss</code> (issuer)</td>
<td>The JWT must contain an <code>iss</code> (issuer) claim that contains a unique identifier that identifies the identity provider that issued the JWT.</td>
</tr>
<tr>
<td><code>sub</code> (subject)</td>
<td>The JWT must contain a <code>sub</code> (subject) claim that identifies the entity that the identity provider or the entity that issued the JWT vouches for.</td>
</tr>
<tr>
<td><code>aud</code> (audience)</td>
<td>The JWT must contain an <code>aud<code> (audience) claim which containing a value that identifies the authorization server as an intended audience. This value should be registered as token endpoint alias in the Identity Provider.</td>
</tr>
<tr>
<td><code>exp</code> (expiration time)</td>
<td>The JWT must contain an <code>exp<code> (expiration) claim that limits the time window during which the JWT can be used.</td>
</tr>
<tr>
<td><code>nbf</code> (not before)</td>
<td>The JWT may contain a <code>nbf<code> (not before time) claim that forces a JWT to be used only after a specified time.</td>
</tr>
<tr>
<td><code>iat</code> (issued at)</td>
<td>The JWT may contain an <code>iat<code> (issued at) claim that identifies the time at which the JWT was issued.</td>
</tr>
<tr>
<td><code>jti</code> (json web token ID)</td>
<td>The JWT may contain <code>jti<code> (JWT ID) claim that provides a unique identifier for the token.</td>
</tr>
<tr>
<td>Other custom claims</td>
<td>The JWT may contain claims other than the above mentioned ones. This is the extension point of the JWT specification.</td>
</tr>
</tbody>
</table>

For example, see the following code block.

**Sample payload**

```
{  
    "sub":"admin",
    "aud":[  
        "https://localhost:9443/oauth2/token"
    ],
    "nbf":1507546100,
    "iss":"jwtIDP",
    "exp":1507606100,
    "iat":1507546100,
    "jti":"Token56756"
}
```

The signature is calculated by base64 URL encoding the header and payload and concatenating them with a period as a separator and signing it:

``` java
Signature = sign(encodeBase64(header) + '.' + encodeBase64(payload))
```

The signature must then be base64 URL encoded. JWT assertion can be generated by concatenating these three encoded values with a separator dot ".".

``` java
assertion =  encodeBase64(header) + '.' + encodeBase64(payload) + '.' + encodeBase64(signature)
```

The result is as follows:

**Sample assertion**

```
eyJhbGciOiJSUzI1NiJ9.eyJzdWIiOiJhZG1pbiIsImF1ZCI6WyJodHRwczpcL1wvbG9jYWxob3N0Ojk0NDNcL29hdXRoMlwvdG9rZW4iXSwibmJmIjoxNTA3NTQ2MTAwLCJpc3MiOiJqd3RJRFAiLCJleHAiOjE1MDc2MDYxMDAsImlhdCI6MTUwNzU0NjEwMCwianRpIjoiVG9rZW41Njc1NiJ9.iGMhjibB0W2QFQlM27gnHp6z47Eybv8cAHk2o2i-xqo2S4uJ_1VppFI4CCJXTj4qzV9vmkJ5HKNAayiTa6wOMXGL4XnwYwpOAoKXvboznlEDNRpw3htW34nLvyUu6PjHbdvAPVjh8kPRwf7esRr2p-luecGvC21mjWdhyGzM4hE
```

!!! tip
    If you want to disable the **JWT Bearer grant type** in the APIM instance, add the following entry to the `deployment.toml` file in the `<APIM_HOME>/repository/conf/` folder.

    ``` toml
    [oauth.grant_type.jwt_bearer]
    enable = false
    ```
